--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --common-chunk --vendor-chunk --extract-css --named-chunks --progress --verbose",
-    "build-watch": "ng build --vendor-chunk --extract-css --named-chunks --watch --progress --verbose",
-    "build-prod": "ng build --common-chunk --vendor-chunk --extract-css --named-chunks --prod --output-hashing=none --progress --verbose ",
-    "start": "ng serve --open --vendor-chunk --extract-css --common-chunk --named-chunks --output-hashing=none --progress --verbose",
-    "start-prod": "ng serve --open --vendor-chunk --extract-css --common-chunk --named-chunks --prod --output-hashing=none --progress --verbose",
+    "build": "ng build --configuration=development --progress --verbose",
+    "build-prod": "ng build --configuration=production --progress --verbose",
+    "start": "ng serve --open --configuration=development --progress",
+    "start-prod": "ng serve --open --configuration=production --progress",
     "test": "ng test",
     "lint": "ng lint --typeCheck --format stylish",
     "lint-fix": "ng lint --format stylish --fix",
@@ -16,28 +15,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.7",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "5.2.7",
-    "@angular/compiler": "5.2.7",
-    "@angular/core": "5.2.7",
-    "@angular/flex-layout": "^5.0.0-beta.13",
-    "@angular/forms": "5.2.7",
-    "@angular/http": "5.2.7",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "5.2.7",
-    "@angular/platform-browser-dynamic": "5.2.7",
-    "@angular/router": "5.2.7",
+    "@angular/animations": "6.1.2",
+    "@angular/cdk": "^6.4.5",
+    "@angular/common": "6.1.2",
+    "@angular/compiler": "6.1.2",
+    "@angular/core": "6.1.2",
+    "@angular/flex-layout": "^6.0.0-beta.17",
+    "@angular/forms": "6.1.2",
+    "@angular/http": "6.1.2",
+    "@angular/material": "^6.4.5",
+    "@angular/platform-browser": "6.1.2",
+    "@angular/platform-browser-dynamic": "6.1.2",
+    "@angular/router": "6.1.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.20"
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.2",
-    "@angular/compiler-cli": "5.2.7",
-    "@angular/language-service": "5.2.7",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "^6.1.3",
+    "@angular/compiler-cli": "6.1.2",
+    "@angular/language-service": "6.1.2",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -52,6 +53,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.6.2"
+    "typescript": "^2.9.2"
   }
 }
