prevent saving anything from .vs folder
Prevent saving extra junk files that Visual Studio 2017 dumps into the project

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# Visual Studio 2017
+.vs/
+# "C:\projects\angular-material-nav\.vs\slnx.sqlite"
+# "C:\projects\angular-material-nav\.vs\slnx.sqlite-journal"
+
 # misc
 /.sass-cache
 /connect.lock
