--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.2.2",
-    "rxjs-compat": "^6.0.0-rc.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
