--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.4",
-    "@angular/cdk": "^6.4.6",
-    "@angular/common": "6.1.4",
-    "@angular/compiler": "6.1.4",
-    "@angular/core": "6.1.4",
+    "@angular/animations": "6.1.6",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "6.1.6",
+    "@angular/compiler": "6.1.6",
+    "@angular/core": "6.1.6",
     "@angular/flex-layout": "^6.0.0-beta.17",
-    "@angular/forms": "6.1.4",
-    "@angular/http": "6.1.4",
-    "@angular/material": "^6.4.6",
-    "@angular/platform-browser": "6.1.4",
-    "@angular/platform-browser-dynamic": "6.1.4",
-    "@angular/router": "6.1.4",
+    "@angular/forms": "6.1.6",
+    "@angular/http": "6.1.6",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "6.1.6",
+    "@angular/platform-browser-dynamic": "6.1.6",
+    "@angular/router": "6.1.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -37,11 +37,11 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.7.4",
     "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "6.1.4",
-    "@angular/language-service": "6.1.4",
+    "@angular/compiler-cli": "6.1.6",
+    "@angular/language-service": "6.1.6",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^10.9.0",
+    "@types/node": "^10.9.4",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -50,8 +50,8 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
+    "protractor": "^5.4.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2"
   }
