--- a/package.json
+++ b/package.json
@@ -15,30 +15,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.6",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "6.1.6",
-    "@angular/compiler": "6.1.6",
-    "@angular/core": "6.1.6",
-    "@angular/flex-layout": "^6.0.0-beta.17",
-    "@angular/forms": "6.1.6",
-    "@angular/http": "6.1.6",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "6.1.6",
-    "@angular/platform-browser-dynamic": "6.1.6",
-    "@angular/router": "6.1.6",
+    "@angular/animations": "7.0.0",
+    "@angular/cdk": "^7.0.0",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/forms": "7.0.0",
+    "@angular/http": "7.0.0",
+    "@angular/material": "^7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/router": "7.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.7.4",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "6.1.6",
-    "@angular/language-service": "6.1.6",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "^7.0.1",
+    "@angular/compiler-cli": "7.0.0",
+    "@angular/language-service": "7.0.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^10.9.4",
@@ -53,6 +53,6 @@
     "protractor": "^5.4.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^2.9.2"
+    "typescript": "^3.1.3"
   }
 }
