--- a/package.json
+++ b/package.json
@@ -15,44 +15,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.4",
-    "@angular/cdk": "^7.2.0",
-    "@angular/common": "7.1.4",
-    "@angular/compiler": "7.1.4",
-    "@angular/core": "7.1.4",
-    "@angular/flex-layout": "^7.0.0-beta.22",
-    "@angular/forms": "7.1.4",
-    "@angular/http": "7.1.4",
-    "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "7.1.4",
-    "@angular/platform-browser-dynamic": "7.1.4",
-    "@angular/router": "7.1.4",
-    "core-js": "^2.6.0",
+    "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
+    "@angular/forms": "~7.2.0",
+    "@angular/http": "~7.2.0",
+    "@angular/material": "~7.2.1",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.3.3",
+    "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
-    "zone.js": "^0.8.26"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.3",
-    "@angular/cli": "^7.1.4",
-    "@angular/compiler-cli": "7.1.4",
-    "@angular/language-service": "7.1.4",
-    "@types/jasmine": "~3.3.2",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^10.12.15",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "~3.3.0",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "~7.2.1",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "^5.4.1",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
   }
 }
