--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
     "zone.js": "~0.8.26"
   },
