--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "ng": "ng",
     "build": "ng build --configuration=development --progress",
     "build-prod": "ng build --configuration=production --progress",
-    "build-azure": "ng build --configuration=production --base-href=\"./\" --progress",
     "start": "ng serve --open --configuration=development --progress",
     "start-prod": "ng serve --open --configuration=production --progress",
-    "start-azure-dev": "ng serve --open --configuration=development --progress",
     "test": "ng test",
     "lint": "ng lint --typeCheck --format stylish",
     "lint-fix": "ng lint --format stylish --fix",
@@ -17,27 +15,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/cdk": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
+    "@angular/animations": "~8.0.0",
+    "@angular/cdk": "~8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.0.0",
-    "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
+    "@angular/forms": "~8.0.0",
+    "@angular/material": "~8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/router": "~8.0.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.0",
-    "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.0.0",
+    "rxjs": "~6.4.0",
+    "rxjs-compat": "~6.4.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.0",
+    "@angular/cli": "~8.0.1",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/jasmine": "~3.3.8",
