--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,7 @@
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
+            "aot": false,
             "assets": [
               "src/assets",
               "src/favicon.ico"
