--- a/package.json
+++ b/package.json
@@ -16,32 +16,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.2",
-    "@angular/cdk": "~8.0.1",
-    "@angular/common": "~8.0.2",
-    "@angular/compiler": "~8.0.2",
-    "@angular/core": "~8.0.2",
+    "@angular/animations": "~8.2.3",
+    "@angular/cdk": "~8.1.3",
+    "@angular/common": "~8.2.3",
+    "@angular/compiler": "~8.2.3",
+    "@angular/core": "~8.2.3",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.0.2",
-    "@angular/material": "~8.0.1",
-    "@angular/platform-browser": "~8.0.2",
-    "@angular/platform-browser-dynamic": "~8.0.2",
-    "@angular/router": "~8.0.2",
+    "@angular/forms": "~8.2.3",
+    "@angular/material": "~8.1.3",
+    "@angular/platform-browser": "~8.2.3",
+    "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/router": "~8.2.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.0",
-    "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.0.0",
+    "rxjs": "~6.4.0",
+    "rxjs-compat": "~6.4.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "^8.0.3",
-    "@angular/compiler-cli": "~8.0.2",
-    "@angular/language-service": "~8.0.2",
+    "@angular-devkit/build-angular": "~0.803.0",
+    "@angular/cli": "~8.3.0",
+    "@angular/compiler-cli": "~8.2.3",
+    "@angular/language-service": "~8.2.3",
+    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.0.0",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -53,6 +54,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.5.3"
   }
 }
