--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,7 @@
             "production": {
               "browserTarget": "angular-material-nav:build:production"
             },
-            "development":{
+            "development": {
               "browserTarget": "angular-material-nav:build:development"
             }
           }
@@ -146,5 +146,8 @@
     "@schematics/angular:directive": {
       "prefix": "app"
     }
+  },
+  "cli": {
+    "analytics": "538af836-6f20-4c82-9e6a-c91058c81b4c"
   }
 }
