--- a/angular.json
+++ b/angular.json
@@ -102,7 +102,7 @@
             "tsConfig": [
               "tsconfig.app.json",
               "tsconfig.spec.json",
-              "e2e/"
+              "e2e/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
