--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --configuration=development --progress",
-    "build-prod": "ng build --configuration=production --progress",
-    "start": "ng serve --open --configuration=development --progress",
-    "start-prod": "ng serve --open --configuration=production --progress",
+    "build": "ng build --configuration=development",
+    "build-prod": "ng build --configuration=production",
+    "start": "ng serve --open --configuration=development",
+    "start-prod": "ng serve --open --configuration=production",
     "test": "ng test",
     "lint": "ng lint --project --format stylish",
     "lint-fix": "ng lint --format stylish --fix",
@@ -16,29 +16,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.0",
-    "@angular/cdk": "~9.2.0",
-    "@angular/common": "~9.1.0",
-    "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
+    "@angular/animations": "~9.1.2",
+    "@angular/cdk": "~9.2.1",
+    "@angular/common": "~9.1.2",
+    "@angular/compiler": "~9.1.2",
+    "@angular/core": "~9.1.2",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~9.1.0",
-    "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "~9.1.0",
-    "@angular/platform-browser-dynamic": "~9.1.0",
-    "@angular/router": "~9.1.0",
+    "@angular/forms": "~9.1.2",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "~9.1.2",
+    "@angular/platform-browser-dynamic": "~9.1.2",
+    "@angular/router": "~9.1.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.0",
-    "rxjs": "~6.5.0",
-    "rxjs-compat": "~6.5.0",
+    "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular/cli": "~9.1.0",
-    "@angular/compiler-cli": "~9.1.0",
-    "@angular/language-service": "~9.1.0",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular/cli": "~9.1.1",
+    "@angular/compiler-cli": "~9.1.2",
+    "@angular/language-service": "~9.1.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -51,8 +50,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "ts-node": "~8.9.0",
+    "tslint": "~6.1.1",
+    "typescript": "~3.8.3"
   }
 }
