--- a/package.json
+++ b/package.json
@@ -4,38 +4,34 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --configuration=development",
-    "build-prod": "ng build --configuration=production",
-    "start": "ng serve --open --configuration=development",
-    "start-prod": "ng serve --open --configuration=production",
-    "test": "ng test",
-    "lint": "ng lint --project --format stylish",
-    "lint-fix": "ng lint --format stylish --fix",
-    "npm-install": "npm install",
-    "e2e": "ng e2e"
+    "start": "ng serve --open --configuration=production",
+    "start-dev": "ng serve --open --configuration=development",
+    "build": "ng build --configuration=production",
+    "watch": "ng build --configuration=development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.1",
-    "@angular/cdk": "^12.0.1",
-    "@angular/common": "~12.0.1",
-    "@angular/compiler": "~12.0.1",
-    "@angular/core": "~12.0.1",
+    "@angular/animations": "~12.0.2",
+    "@angular/cdk": "^12.0.2",
+    "@angular/common": "~12.0.2",
+    "@angular/compiler": "~12.0.2",
+    "@angular/core": "~12.0.2",
     "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "~12.0.1",
-    "@angular/material": "^12.0.0",
-    "@angular/platform-browser": "~12.0.1",
-    "@angular/platform-browser-dynamic": "~12.0.1",
-    "@angular/router": "~12.0.1",
+    "@angular/forms": "~12.0.2",
+    "@angular/material": "^12.0.2",
+    "@angular/platform-browser": "~12.0.2",
+    "@angular/platform-browser-dynamic": "~12.0.2",
+    "@angular/router": "~12.0.2",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.1",
-    "@angular/cli": "~12.0.1",
-    "@angular/compiler-cli": "~12.0.1",
+    "@angular-devkit/build-angular": "~12.0.2",
+    "@angular/cli": "~12.0.2",
+    "@angular/compiler-cli": "~12.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
