--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
             "styles": ["src/styles.scss"],
             "scripts": [],
             "vendorChunk": true,
+            "commonChunk": true,
             "extractLicenses": false,
             "buildOptimizer": false,
             "sourceMap": true,
