--- a/angular.json
+++ b/angular.json
@@ -9,12 +9,15 @@
       "projectType": "application",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist",
+            "outputPath": {
+              "base": "dist"
+            },
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "src/polyfills.ts"
+            ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "aot": false,
@@ -26,24 +29,20 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "vendorChunk": true,
-            "commonChunk": true,
             "extractLicenses": false,
-            "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
             "namedChunks": true,
             "progress": true,
-            "verbose": true
+            "verbose": true,
+            "browser": "src/main.ts"
           },
           "configurations": {
             "production": {
-              "buildOptimizer": true,
               "aot": true,
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "commonChunk": true,
               "namedChunks": false,
               "extractLicenses": true,
               "progress": true,
@@ -56,13 +55,10 @@
               ]
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true,
-              "commonChunk": true,
               "progress": true,
               "verbose": true,
               "watch": false
@@ -73,14 +69,14 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-material-nav:build"
+            "buildTarget": "angular-material-nav:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-material-nav:build:production"
+              "buildTarget": "angular-material-nav:build:production"
             },
             "development": {
-              "browserTarget": "angular-material-nav:build:development"
+              "buildTarget": "angular-material-nav:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -88,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-material-nav:build"
+            "buildTarget": "angular-material-nav:build"
           }
         },
         "test": {
